<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.wubydax.romcontrol.v2.prefs.ImageHeaderPreference
        app:imageSource="@drawable/android"/>

    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
        android:defaultValue="true"
        android:key="usb_plugged"
        android:summaryOff="@string/switch_off"
        android:summaryOn="@string/switch_on"
        android:title="@string/usb_plug_wakeup"/>

    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
        android:defaultValue="true"
        android:key="button_light_on"
        android:summaryOff="@string/witch_off"
        android:summaryOn="@string/witch_on"
        android:title="@string/button_light"/>

    <PreferenceScreen
        android:title="@string/volume_rocker">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:title="@string/music_control"
            android:key="volbtn_music_controls"
            android:defaultValue="false" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:entries="@array/volbtn_action_entries"
            android:title="@string/volbtn_vol_up_title"
            android:key="volbtn_vol_up"
            android:summary="%s"
            android:dependency="volbtn_music_controls"
            android:defaultValue="87"
            android:entryValues="@array/volbtn_action_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:entries="@array/volbtn_down_action_entries"
            android:title="@string/volbtn_vol_down_title"
            android:key="volbtn_vol_down"
            android:summary="%s"
            android:dependency="volbtn_music_controls"
            android:defaultValue="88"
            android:entryValues="@array/volbtn_down_action_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:entries="@array/volbtn_timeout_entries"
            android:title="@string/long_press_timeout"
            android:key="volbtn_timeout"
            android:summary="%s"
            android:defaultValue="350"
            android:dependency="volbtn_music_controls"
            android:entryValues="@array/volbtn_timeout_values" />
    </PreferenceScreen>

</PreferenceScreen>