<?xml version="1.0" encoding="utf-8"?>

<!--/*      Created by Roberto Mariani and Anna Berkovitch, 2015-2016
        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see <http://www.gnu.org/licenses/>.*/-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.wubydax.romcontrol.v2.prefs.ImageHeaderPreference
        app:imageSource="@drawable/android"/>

    <PreferenceScreen
        android:title="@string/status_bar">
        <com.wubydax.romcontrol.v2.prefs.IntentDialogPreference
            android:key="longpress_clock_custom_app"
            android:title="@string/longpress_clock_app"
            app:intentSeparator="##"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/nav_bar">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="qemu_hw_mainkeys"
            android:summaryOff="@string/switch_hide"
            android:summaryOn="@string/switch_show"
            android:title="@string/on_screen_buttons"
            app:rebootDevice="true"/>
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:entries="@array/immersive_entries"
            android:title="@string/immersive_mode"
            android:key="policy_control"
            android:summary="%s"
            android:entryValues="@array/immersive_values" />
    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/notification_panel">
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:entries="@array/low_battery_savemodenotif_entries"
            android:title="@string/low_battery_savemode"
            android:key="low_battery_savemodenotif"
            android:defaultValue="15"
            android:entryValues="@array/low_battery_savemodenotif_values"
            app:isSilent="false"
            app:packageNameToKill="com.android.systemui" />

        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:entries="@array/low_battery_supermodenotif_entries"
            android:title="@string/low_battery_supermode"
            android:key="low_battery_supermodenotif"
            android:defaultValue="5"
            android:entryValues="@array/low_battery_supermodenotif_values"
            app:isSilent="false"
            app:packageNameToKill="com.android.systemui" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/recents_apps">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="1"
            android:key="quick_launch_visible"
            android:summaryOff="@string/switch_hide"
            android:summaryOn="@string/switch_show"
            android:title="@string/quick_launch_panel"
            app:isSilent="false"
            app:packageNameToKill="com.android.systemui" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="1"
            android:key="aokpram"
            android:summaryOff="@string/switch_hide"
            android:summaryOn="@string/switch_show"
            android:title="@string/aokp_ram_panel"
            app:isSilent="false"
            app:packageNameToKill="com.android.systemui" />
    </PreferenceScreen>

</PreferenceScreen>